examples/jp_chkt_12.asl
func p() : int
  return;
  return 3;
  return 4.5;
  return true;
  return 55;
endfunc

func q()
  return 4 > 5;
  return;
  return;
endfunc

func r() : float
  var a : array[10] of float
  return;
  return 3;
  return 4.5;
  return a[2];
  return a;
  return 7.8;
endfunc

func s()
  var a : array[10] of bool
  read a;
  write a;
  read s;
  write s;
  write 34;
  return;
endfunc

func t()
endfunc

func u()
  return;
  return;
endfunc

func main()
endfunc
